expose/spin-deck-expose.yml
#-----------------------------------------------------------------------------------------------------------------
# Example configuration of an alternate service definition for deck. Offers maximum control and configurability.
#-----------------------------------------------------------------------------------------------------------------
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spin
    cluster: spin-deck-expose
  name: spin-deck-expose
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: spin
    cluster: spin-deck
  sessionAffinity: None
