expose/spin-gate-expose.yml
#-----------------------------------------------------------------------------------------------------------------
# Example configuration of an alternate service definition for gate. Offers maximum control and configurability.
#-----------------------------------------------------------------------------------------------------------------
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spin
    cluster: spin-gate-expose
  name: spin-gate-expose
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8084
      protocol: TCP
      targetPort: 8084
  selector:
    app: spin
    cluster: spin-gate
  sessionAffinity: None
